Refactoring invoice, txn, make flow